--- a/src/page/SearchPage.module.css
+++ b/src/page/SearchPage.module.css
@@ -1,25 +1,10 @@
+.body_section {
+  display: flex;
+  flex-direction: column;
+}
+
 .main {
   padding: 5vh 5vw;
-}
-
-.header div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header div img {
-  max-width: 100%;
-  max-height: 10vh;
-}
-
-.header div svg {
-  width: 150px;
-  cursor: pointer;
-}
-
-.header div svg g path:hover {
-  fill: #6c7274;
 }
 
 .type {
