handleSearchByType und searchbox filteredResult ist koregiert und darkmode

--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,9 @@
   margin: 0 auto;
   padding-top: 50px;
 }
+.dark {
+  background-color: var(--bgDarkmode);
+}
+.light {
+  background-color: var(--flyng);
+}
