--- a/src/page/SearchPage.module.css
+++ b/src/page/SearchPage.module.css
@@ -56,7 +56,8 @@
 .buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
+  gap: 20px;
+  justify-items: center;
 }
 
 .tooltip_article {
