--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  max-width: 375px;
 }
 .dark {
   background-color: var(--bgDarkmode);
