--- a/src/components/PokemonDetails.module.css
+++ b/src/components/PokemonDetails.module.css
@@ -12,9 +12,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: var(--Cards-Light-Mode);
   border-radius: 20px;
   height: 120px;
+}
+
+.light {
+  background: var(--Cards-Light-Mode);
+}
+
+.dark {
+  background: var(--Cards-Dark-Mode);
 }
 
 .container {
