--- a/src/components/PokemonList.module.css
+++ b/src/components/PokemonList.module.css
@@ -2,7 +2,7 @@
   width: 375px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 20px;
+  gap: 40px 20px;
   padding: 0 20px;
   margin: 100px 0;
 }
