--- a/src/App.css
+++ b/src/App.css
@@ -36,11 +36,15 @@
 
 @font-face {
   font-family: RobotoR;
-  src: url("./assets/fonts/Roboto-Regular.ttf");
+  src: url('./assets/fonts/Roboto-Regular.ttf');
 }
 @font-face {
   font-family: RobotoB;
-  src: url("./assets/fonts/Roboto-Black.ttf");
+  src: url('./assets/fonts/Roboto-Black.ttf');
+}
+@font-face {
+  font-family: RobotoBold;
+  src: url('./assets/fonts/Roboto-Bold.ttf');
 }
 
 .logo {
