loading screen und darkmode

--- a/src/page/DetailPage.css
+++ b/src/page/DetailPage.css
@@ -1,21 +1,20 @@
-.page {
+.detail-page {
   height: 100vh;
   font-family: RobotoR;
   font-size: 62.5%;
   text-align: center;
-  background-color: #ccdadd;
   padding: 20px;
   width: 100%;
 }
 
-.logo {
+.pokemonlogo {
   width: 60%;
   display: block;
   padding-top: 25px;
   margin: 0 auto;
 }
 
-.page h1 {
+.detail-page h1 {
   font-family: RobotoB;
   color: #ffcb05;
   -webkit-text-stroke: 3px #2c72b8;
@@ -26,47 +25,59 @@
 .card {
   width: 90%;
   display: block;
-  margin: 150px auto 25px auto;
+  margin: 100px auto 25px auto;
   background-image: linear-gradient(to bottom left, #ffcb05, #ffe1c6);
   height: 20vh;
   position: relative;
   border-radius: 10px;
 }
 
-.pokemon {
+/*- Card Background für Darkmode */
+.darkcard {
+  width: 90%;
+  display: block;
+  margin: 100px auto 25px auto;
+  height: 20vh;
+  position: relative;
+  border-radius: 10px;
+  background-image: linear-gradient(to bottom left, #252525, #bfdfff);
+}
+
+.super-pokemon {
+  width: 90%;
+  bottom: 5px;
+  left: 5%;
   position: absolute;
-  width: 100%;
-  bottom: 1px;
-  left: 3%;
 }
 
 button {
   border: none;
 }
 
-.page button {
+.detail-page button {
   border: none;
   margin: 0 5px 25px 5px;
   padding: 10px 35px;
+  width: 40%;
 }
 
-.page p {
+.detail-page p {
   color: #ffffff;
   font-size: 1.2rem;
 }
 
-.page h3 {
+.detail-page h3 {
   color: #2c72b8;
   font-size: 1.4rem;
   font-family: RobotoB;
   margin-bottom: 10px;
 }
 
-.page a {
+.detail-page a {
   text-decoration: none;
   color: #ffcb05;
-  -webkit-text-stroke: 1px #2c72b8;
+  -webkit-text-stroke: 1.5px #2c72b8;
   font-size: 2rem;
   display: block;
-  margin-top: 25px;
+  margin: 40px 0 110px 0;
 }
