--- a/src/components/searchpage/TypeButtons.module.css
+++ b/src/components/searchpage/TypeButtons.module.css
@@ -7,7 +7,7 @@
   cursor: pointer;
   width: 100%;
   text-align: center;
-  border: 2px solid black;
+  border: 2px solid black !important;
 }
 
 .button:hover {
