--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -2,4 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  gap: 20px;
+}
+
+.input {
+  border-radius: 50px;
+  padding: 7.5px;
+  border: none;
 }
