--- a/src/components/PokemonDetails.module.css
+++ b/src/components/PokemonDetails.module.css
@@ -27,7 +27,7 @@
 
 .container {
   position: relative;
-  height: 92px;
+  height: 95px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -38,7 +38,7 @@
   width: auto;
   margin: 0;
   position: absolute;
-  top: -80%;
+  bottom: 10%;
 }
 
 .info {
