--- a/src/components/PokemonList.module.css
+++ b/src/components/PokemonList.module.css
@@ -5,4 +5,10 @@
   gap: 40px 20px;
   padding: 0 20px;
   margin: 100px 0;
+  min-height: 100vh;
+}
+
+.loadmore {
+  border-radius: 10px;
+  margin-bottom: 50px;
 }
