--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -2,4 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin-top: 30px;
+}
+
+.searchBox input {
+  border: none;
+  border-radius: 10px;
+  height: 25px;
+  text-align: center;
+  width: 60%;
 }
