--- a/src/page/Home.module.css
+++ b/src/page/Home.module.css
@@ -4,11 +4,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
   border-radius: 15px;
 }
 .img {
   margin: 20px auto;
+  width: 60%;
+  display: block;
 }
 .header {
   display: flex;
