--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -2,4 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin-top: 40px;
+}
+.searchBox > * {
+  margin-left: 15px;
+}
+.input {
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
 }
