--- a/src/components/PokemonList.module.css
+++ b/src/components/PokemonList.module.css
@@ -2,9 +2,10 @@
   width: 390px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 156px;
   gap: 60px 20px;
   padding: 0 20px;
-  margin: 100px 0;
+  margin: 50px 0 100px 0;
   min-height: 100vh;
 }
 
